--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.2-1",
     "@rails/ujs": "^6.0.2-1",
-    "@rails/webpacker": "4.2.2"
+    "@rails/webpacker": "4.2.2",
+    "resolve-url-loader": "^3.1.1"
   },
   "version": "0.1.0",
   "devDependencies": {
