--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -11,7 +11,8 @@ default: &default
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
-  resolved_paths: []
+  resolved_paths:
+    - app/assets
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
@@ -51,6 +52,7 @@ default: &default
 development:
   <<: *default
   compile: true
+  extract_css: true
 
   # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
   check_yarn_integrity: false
